--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li>
                 <a href="#google+">
                     <img src="img/icon_googleplus.png" alt="Google+">
-                    <img src="img/icon_googleplus_h.png" alt="Google+"class="hover">
+                    <img src="img/icon_googleplus_h.png" alt="Google+" class="hover">
                 </a>
             </li>
         </ul>
@@ -184,32 +184,32 @@
                         </ul>
                     </li>
                     <li>
-                        <span class="bgc-sculture-hover"><a href="#">ESCULTURA</a></span>
+                        <span class="bgc-sculpture-hover"><a href="#">ESCULTURA</a></span>
                         <ul class="sub-menu">
-                            <li class="bgc-sculture-hover">
+                            <li class="bgc-sculpture-hover">
                                 <div><a href="#">ANTIGUA</a></div>
                             </li>
-                            <li class="bgc-sculture-hover">
+                            <li class="bgc-sculpture-hover">
                                 <div><a href="#">RELIEVES</a></div>
                             </li>
-                            <li class="bgc-sculture-hover">
+                            <li class="bgc-sculpture-hover">
                                 <div><a href="#">CINÉTICA</a></div>
                             </li>
-                            <li class="bgc-sculture-hover">
+                            <li class="bgc-sculpture-hover">
                                 <div><a href="#">CONTEMPORÁNEA</a></div>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <span class="bgc-sculture-hover"><a href="#">DINÁMICAS</a></span>
+                        <span class="bgc-dynamics-hover"><a href="#">DINÁMICAS</a></span>
                         <ul class="sub-menu">
-                            <li class="bgc-sculture-hover">
+                            <li class="bgc-dynamics-hover">
                                 <div><a href="#">MÚSICA</a></div>
                             </li>
-                            <li class="bgc-sculture-hover">
+                            <li class="bgc-dynamics-hover">
                                 <div><a href="#">LITERATURA</a></div>
                             </li>
-                            <li class="bgc-sculture-hover">
+                            <li class="bgc-dynamics-hover">
                                 <div><a href="#">DANZA</a></div>
                             </li>
                         </ul>
@@ -234,7 +234,7 @@
                 <li class="bgc-paint">&nbsp;</li>
                 <li class="bgc-photography">&nbsp;</li>
                 <li class="bgc-mixed">&nbsp;</li>
-                <li class="bgc-sculture">&nbsp;</li>
+                <li class="bgc-sculpture">&nbsp;</li>
                 <li class="bgc-dynamics">&nbsp;</li>
             </ul>
 
@@ -378,6 +378,17 @@
 
                         </div>
 
+                        <ul class="menu-inline nav">
+                            <li>
+                                <img src="img/icon_flecha_izq.png" alt="">
+                                <img src="img/icon_flecha_izq_h.png" alt="" class="hover">
+                            </li>
+                            <li>
+                                <img src="img/icon_flecha_der.png" alt="">
+                                <img src="img/icon_flecha_der_h.png" alt="" class="hover">
+                            </li>
+                        </ul>
+
                     </section>
 
                     <section class="section architecture">
@@ -508,6 +519,17 @@
 
                         </div>
 
+                        <ul class="menu-inline nav">
+                            <li>
+                                <img src="img/icon_flecha_izq.png" alt="">
+                                <img src="img/icon_flecha_izq_h.png" alt="" class="hover">
+                            </li>
+                            <li>
+                                <img src="img/icon_flecha_der.png" alt="">
+                                <img src="img/icon_flecha_der_h.png" alt="" class="hover">
+                            </li>
+                        </ul>
+
                     </section>
 
                     <section class="section paint">
@@ -630,6 +652,17 @@
                             </div>
 
                         </div>
+
+                        <ul class="menu-inline nav">
+                            <li>
+                                <img src="img/icon_flecha_izq.png" alt="">
+                                <img src="img/icon_flecha_izq_h.png" alt="" class="hover">
+                            </li>
+                            <li>
+                                <img src="img/icon_flecha_der.png" alt="">
+                                <img src="img/icon_flecha_der_h.png" alt="" class="hover">
+                            </li>
+                        </ul>
 
                     </section>
 
@@ -760,6 +793,17 @@
 
                         </div>
 
+                        <ul class="menu-inline nav">
+                            <li>
+                                <img src="img/icon_flecha_izq.png" alt="">
+                                <img src="img/icon_flecha_izq_h.png" alt="" class="hover">
+                            </li>
+                            <li>
+                                <img src="img/icon_flecha_der.png" alt="">
+                                <img src="img/icon_flecha_der_h.png" alt="" class="hover">
+                            </li>
+                        </ul>
+
                     </section>
 
                     <section class="section mixed">
@@ -867,6 +911,17 @@
                             </div>
 
                         </div>
+
+                        <ul class="menu-inline nav">
+                            <li>
+                                <img src="img/icon_flecha_izq.png" alt="">
+                                <img src="img/icon_flecha_izq_h.png" alt="" class="hover">
+                            </li>
+                            <li>
+                                <img src="img/icon_flecha_der.png" alt="">
+                                <img src="img/icon_flecha_der_h.png" alt="" class="hover">
+                            </li>
+                        </ul>
 
                     </section>
 
@@ -988,6 +1043,17 @@
 
                         </div>
 
+                        <ul class="menu-inline nav">
+                            <li>
+                                <img src="img/icon_flecha_izq.png" alt="">
+                                <img src="img/icon_flecha_izq_h.png" alt="" class="hover">
+                            </li>
+                            <li>
+                                <img src="img/icon_flecha_der.png" alt="">
+                                <img src="img/icon_flecha_der_h.png" alt="" class="hover">
+                            </li>
+                        </ul>
+
                     </section>
 
                     <section class="section dynamics">
@@ -1107,10 +1173,25 @@
 
                         </div>
 
+                        <ul class="menu-inline nav">
+                            <li>
+                                <img src="img/icon_flecha_izq.png" alt="">
+                                <img src="img/icon_flecha_izq_h.png" alt="" class="hover">
+                            </li>
+                            <li>
+                                <img src="img/icon_flecha_der.png" alt="">
+                                <img src="img/icon_flecha_der_h.png" alt="" class="hover">
+                            </li>
+                        </ul>
+
                     </section>
 
                 </section>
 
+            </div>
+
+            <div style="width: 100%; height: 100%; margin-top: 100px; background-color: #333;">
+                 
             </div>
 
         </div>
