--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div id="home">
 
-            <div style="margin: 0 auto; min-width: 960px; width: 75%;">
+            <div style="margin: 0 auto; width: 1020px;">
                 
                 <div style="margin-top: 40px; text-align: center;">
                     <img src="img/logo_grande.png" alt="">
