agregando mas secciones y codigo

--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                             <img src="img/slider-principal/slider_a1.jpg" alt="">
                             <div class="header__layout__slide__slider__image__info">
                                 <div style="padding: 15px;">
-                                    <span style="display: block; font-family: 'FJalla One', sans-serif; font-size: 1.5em;"><a href="#">AMOR CIEGO</a></span>
-                                    <span style="display: block; color: #888;">Autor <a href="#" style="color: #FAC600;">Martín Rodriguez</a></span>
+                                    <span class="header__layout__slide__slider__image__info__title"><a href="#">AMOR CIEGO</a></span>
+                                    <span class="header__layout__slide__slider__image__info__author">Autor <a href="#">Martín Rodriguez</a></span>
                                 </div>
                             </div>
                         </div>
@@ -245,8 +245,8 @@
                             <img src="img/slider-principal/slider_a1.jpg" alt="">
                             <div class="header__layout__slide__slider__image__info">
                                 <div style="padding: 15px;">
-                                    <span style="display: block; font-family: 'FJalla One', sans-serif; font-size: 1.5em;"><a href="#">AMOR CIEGO</a></span>
-                                    <span style="display: block; color: #888;">Autor <a href="#" style="color: #FAC600;">Martín Rodriguez</a></span>
+                                    <span class="header__layout__slide__slider__image__info__title"><a href="#">AMOR CIEGO</a></span>
+                                    <span class="header__layout__slide__slider__image__info__author">Autor <a href="#">Martín Rodriguez</a></span>
                                 </div>
                             </div>
                         </div>
@@ -254,8 +254,8 @@
                             <img src="img/slider-principal/slider_a1.jpg" alt="">
                             <div class="header__layout__slide__slider__image__info">
                                 <div style="padding: 15px;">
-                                    <span style="display: block; font-family: 'FJalla One', sans-serif; font-size: 1.5em;"><a href="#">AMOR CIEGO</a></span>
-                                    <span style="display: block; color: #999;">Autor <a href="#" style="color: #FAC600;">Martín Rodriguez</a></span>
+                                    <span class="header__layout__slide__slider__image__info__title"><a href="#">AMOR CIEGO</a></span>
+                                    <span class="header__layout__slide__slider__image__info__author">Autor <a href="#">Martín Rodriguez</a></span>
                                 </div>
                             </div>
                         </div>
