--- a/photography.html
+++ b/photography.html
@@ -271,7 +271,63 @@
                         		</div>
                         	</section>
                         	<aside class="body__content__sections__section__blog__aside">
-                        		a
+                                <div class="body__content__sections__section__blog__aside__layout">
+                            		<section class="body__content__sections__section__blog__aside__layout__element">
+                                        <header class="body__content__sections__section__blog__aside__layout__element__header">
+                                            <span class="body__content__sections__section__blog__aside__layout__element__header__title">BÚSCANOS EN FACEBOOK</span>
+                                        </header> 
+                                        <div class="body__content__sections__section__blog__aside__layout__element__box">
+                                            <img src="img/caja_face.jpg" alt="">
+                                        </div>     
+                                    </section>
+                                    <section class="body__content__sections__section__blog__aside__layout__element">
+                                        <header class="body__content__sections__section__blog__aside__layout__element__header">
+                                            <span class="body__content__sections__section__blog__aside__layout__element__header__title">SÍGUENOS EN TWITTER</span>
+                                        </header>
+                                        <div class="body__content__sections__section__blog__aside__layout__element__box">
+                                            <img src="img/caja_twitt.jpg" alt="">
+                                        </div>      
+                                    </section>
+                                    <section class="body__content__sections__section__blog__aside__layout__element">
+                                        <header class="body__content__sections__section__blog__aside__layout__element__header">
+                                            <span class="body__content__sections__section__blog__aside__layout__element__header__title">LO MEJOR DE LA ...</span><span class="body__content__sections__section__blog__aside__layout__element__header__title body__content__sections__section__blog__aside__layout__element__header__title--extra">SEMANA</span>
+                                        </header>
+                                        <div class="body__content__sections__section__blog__aside__layout__element__box body__content__sections__section__blog__aside__layout__element__box--the-best-of-the clearfix">
+                                            <img src="img/best/a.jpg" alt="">
+                                            <img src="img/best/b.jpg" alt="">
+                                            <img src="img/best/c.jpg" alt="">
+                                            <img src="img/best/d.jpg" alt="">
+                                            <img src="img/best/e.jpg" alt="">
+                                            <img src="img/best/f.jpg" alt="">
+                                            <img src="img/best/g.jpg" alt="">
+                                            <img src="img/best/h.jpg" alt="">
+                                            <img src="img/best/i.jpg" alt="">
+                                            <img src="img/best/j.jpg" alt="">
+                                            <img src="img/best/k.jpg" alt="">
+                                            <img src="img/best/l.jpg" alt="">
+                                            <img src="img/best/m.jpg" alt="">
+                                            <img src="img/best/n.jpg" alt="">
+                                            <img src="img/best/o.jpg" alt="">
+                                            <img src="img/best/p.jpg" alt="">
+                                        </div>      
+                                    </section>
+                                    <section class="body__content__sections__section__blog__aside__layout__element">
+                                        <header class="body__content__sections__section__blog__aside__layout__element__header">
+                                            <span class="body__content__sections__section__blog__aside__layout__element__header__title">NOS APOYAN</span>
+                                        </header>
+                                        <div class="body__content__sections__section__blog__aside__layout__element__box body__content__sections__section__blog__aside__layout__element__box--ads clearfix">
+                                            <div class="ads ads--pattern-1"></div>
+                                            <div class="ads ads--pattern-2"></div>
+                                            <div class="ads ads--pattern-3"></div>
+                                            <div class="ads ads--pattern-4"></div>
+                                            <div class="ads ads--pattern-5"></div>
+                                            <div class="ads ads--pattern-6"></div>
+                                            <div class="ads ads--pattern-7"></div>
+                                            <div class="ads ads--pattern-8"></div>
+                                            <div class="ads ads--pattern-9"></div>
+                                        </div>      
+                                    </section>
+                                </div>
                         	</aside>
                         </div>
                     </section>
