--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </header>
         <!--========== art+ | aside ==========-->
-        <aside class="sidebar sidebar--active">
+        <aside class="sidebar">
             <nav class="sidebar__nav">
                 <img src="img/logo_small.png" alt="" style="margin-top: 10px;" class="sidebar__nav__logo">
                 <ul class="list sidebar__nav__sidenav">
