--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="es"> <!--<![endif]-->
+<html class="no-js" lang="es">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Art+ | Cambiando el mundo</title>
-        <meta name="description" content="Art+">
+        <title>Art+</title>
+        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
-    <body>      
+    <body>
         <!--========== art+ | nav - user ==========-->
         <ul class="list list--inline nav nav--user">
-            <li></li><!--
-            --><li></li><!--
-            --><li></li>
+            <li><a href="#">English <span class="icon">&#59232;</span></a></li><!--
+            --><li><a href="#" class="icon">&#128100;</a></li><!--
+            --><li><a href="#" class="icon">&#128269;</a></li>
         </ul>
         <!--========== art+ | nav - social networks ==========-->
         <ul class="list list--inline nav nav--social-networks">
-            <li><a href="#"></a></li><!--
-            --><li><a href="#"></a></li><!--
-            --><li><a href="#"></a></li><!--
-            --><li><a href="#" class="icon-social">&#62220;</a></li>
+            <li><a href="#" class="icon-social icon-social--facebook">&#62220;</a></li><!--
+            --><li><a href="#" class="icon-social icon-social--twitter">&#62217;</a></li><!--
+            --><li><a href="#" class="icon-social icon-social--google-plus">&#62223;</a></li><!--
+            --><li><a href="#" class="icon icon--youtube">&#127916;</a></li>
         </ul>
         <!--========== art+ | header ==========-->
         <header class="header">
@@ -216,17 +212,100 @@
                 </ul>
             </nav>
         </aside>
-        <!--========== art+ | main ==========-->
-        <main class="main"></main>
+        <!--========== art+ | articles ==========-->
+        <main class="articles">
+            <div class="articles__container">
+                <!--========== art+ | main - article design ==========-->
+                <article class="design">
+                    <header class="c-design">diseño</header>
+                    <menu class="list list--inline">
+                        <li><a href="#" class="bgc-hover-design">tipografía y caligrafía</a></li><!--
+                        --><li><a href="#" class="bgc-hover-design">identidad</a></li><!--
+                        --><li><a href="#" class="bgc-hover-design">editorial y publicitario</a></li><!--
+                        --><li><a href="#" class="bgc-hover-design">diseño web</a></li><!--
+                        --><li><a href="#" class="bgc-hover-design">diseño industrial</a></li><!--
+                        --><li><a href="#" class="bgc-hover-design">diseño de modas</a></li><!--
+                        --><li><a href="#" class="bgc-hover-design">diseño de interiores</a></li>
+                    </menu>
+                    <section></section>
+                </article>
+                <!--========== art+ | main - article architecture ==========-->
+                <article class="architecture">
+                    <header class="c-architecture">architecture</header>
+                    <menu class="list list--inline">
+                        <li><a href="#" class="bgc-hover-architecture">antigua</a></li><!--
+                        --><li><a href="#" class="bgc-hover-architecture">moderna</a></li><!--
+                        --><li><a href="#" class="bgc-hover-architecture">urbanismo</a></li><!--
+                        --><li><a href="#" class="bgc-hover-architecture">paisajismo</a></li>
+                    </menu>
+                    <section></section>
+                </article>
+                <!--========== art+ | main - article paint ==========-->
+                <article class="paint">
+                    <header class="c-paint">pintura</header>
+                    <menu class="list list--inline">
+                        <li><a href="#" class="bgc-hover-paint">clásica</a></li><!--
+                        --><li><a href="#" class="bgc-hover-paint">dibujo</a></li><!--
+                        --><li><a href="#" class="bgc-hover-paint">collage y artesanías</a></li><!--
+                        --><li><a href="#" class="bgc-hover-paint">ilustración</a></li><!--
+                        --><li><a href="#" class="bgc-hover-paint">arte urbano</a></li><!--
+                        --><li><a href="#" class="bgc-hover-paint">body painting y tatoo</a></li><!--
+                        --><li><a href="#" class="bgc-hover-paint">contemporánea</a></li>
+                    </menu>
+                    <section></section>
+                </article>
+                <!--========== art+ | main - article photography ==========-->
+                <article class="photography">
+                    <header class="c-photography">fotografía</header>
+                    <menu class="list list--inline">
+                        <li><a href="#" class="bgc-hover-photography">paisajes y ciudad</a></li><!--
+                        --><li><a href="#" class="bgc-hover-photography">personas</a></li><!--
+                        --><li><a href="#" class="bgc-hover-photography">naturaleza</a></li><!--
+                        --><li><a href="#" class="bgc-hover-photography">conceptual y otros</a></li>
+                    </menu>
+                    <section></section>
+                </article>
+                <!--========== art+ | main - article mixed ==========-->
+                <article class="mixed">
+                    <header class="c-mixed">mixtas</header>
+                    <menu class="list list--inline">
+                        <li><a href="#" class="bgc-hover-mixed">cine</a></li><!--
+                        --><li><a href="#" class="bgc-hover-mixed">animación y videojuegos</a></li><!--
+                        --><li><a href="#" class="bgc-hover-mixed">teatro</a></li>
+                    </menu>
+                    <section></section>
+                </article>
+                <!--========== art+ | main - article sculpture ==========-->
+                <article class="sculpture">
+                    <header class="c-sculpture">escultura</header>
+                    <menu class="list list--inline">
+                        <li><a href="#" class="bgc-hover-sculpture">antigua</a></li><!--
+                        --><li><a href="#" class="bgc-hover-sculpture">relieves</a></li><!--
+                        --><li><a href="#" class="bgc-hover-sculpture">cinética</a></li><!--
+                        --><li><a href="#" class="bgc-hover-sculpture">contemporánea</a></li>
+                    </menu>
+                    <section></section>
+                </article>
+                <!--========== art+ | main - article dynamics ==========-->
+                <article class="dynamics">
+                    <header class="c-dynamics">dinámicas</header>
+                    <menu class="list list--inline">
+                        <li><a href="#" class="bgc-hover-dynamics">música</a></li><!--
+                        --><li><a href="#" class="bgc-hover-dynamics">literatura</a></li><!--
+                        --><li><a href="#" class="bgc-hover-dynamics">danza</a></li>
+                    </menu>
+                    <section></section>
+                </article>
+            </div>
+        </main>
         <!--========== art+ | footer ==========-->
         <footer class="footer"></footer>
         <!--========== art+ | javascript ==========-->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.0.3.min.js"><\/script>')</script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
-        <script src="js/vendor/jquery.cycle2.min.js"></script>
         <script src="js/main.js"></script>
-        <!--========== art+ | GA ==========-->
+        <!-- Google Analytics: change UA-XXXXX-X to be your sites ID. -->
         <!--<script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
