agregando grid y footer, mas cambios en css y mejoras de animaciones en css

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <body>
         <!--========== art+ | nav - user ==========-->
         <ul class="list list--inline nav nav--user">
-            <li><a href="#">English <span class="icon">&#59232;</span></a></li><!--
-            --><li><a href="#" class="icon">&#128100;</a></li><!--
-            --><li><a href="#" class="icon">&#128269;</a></li>
+            <li><a href="#" title="Idioma">English <span class="icon">&#59232;</span></a></li><!--
+            --><li><a href="#" title="Usuario" class="icon">&#128100;</a></li><!--
+            --><li><a href="#" title="Buscar" class="icon">&#128269;</a></li>
         </ul>
         <!--========== art+ | nav - social networks ==========-->
         <ul class="list list--inline nav nav--social-networks">
-            <li><a href="#" class="icon-social icon-social--facebook">&#62220;</a></li><!--
-            --><li><a href="#" class="icon-social icon-social--twitter">&#62217;</a></li><!--
-            --><li><a href="#" class="icon-social icon-social--google-plus">&#62223;</a></li><!--
-            --><li><a href="#" class="icon icon--youtube">&#127916;</a></li>
+            <li><a href="#" title="facebook" class="icon-social icon-social--facebook">&#62220;</a></li><!--
+            --><li><a href="#" title="twitter" class="icon-social icon-social--twitter">&#62217;</a></li><!--
+            --><li><a href="#" title="google+" class="icon-social icon-social--google-plus">&#62223;</a></li><!--
+            --><li><a href="#" title="youtube" class="icon icon--youtube">&#127916;</a></li>
         </ul>
         <!--========== art+ | header ==========-->
         <header class="header">
             <nav class="header__nav clearfix">
-                <img src="img/logo.png" alt="" class="header__nav__logo"><!--
+                <a href="#" class="header__nav__logo"><img src="img/logo.png" alt=""></a><!--
                 --><ul class="list list--inline header__nav__navbar">
                     <li class="dropdown">
                         <a href="#" class="bgc-hover-design">diseño</a>
@@ -227,7 +227,93 @@
                         --><li><a href="#" class="bgc-hover-design">diseño de modas</a></li><!--
                         --><li><a href="#" class="bgc-hover-design">diseño de interiores</a></li>
                     </menu>
-                    <section></section>
+                    <section class="grid images">
+                        <div class="e w1 h2 image" style="background-color: #111;">
+                            <img src="img/design/prueba_b.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="e w1 h3 image" style="background-color: #777;">
+                            <img src="img/design/prueba_c.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="e w2 h4 image" style="background-color: #333;">
+                            <img src="img/design/prueba_b.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="e w2 h2 image" style="background-color: #555;">
+                            <img src="img/design/prueba_f.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="e w2 h2 image" style="background-color: cyan;">
+                            <img src="img/design/prueba_d.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="e w1 h3 image" style="background-color: #ccc;">
+                            <img src="img/design/prueba_c.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="e w1 h1 image" style="background-color: #999;">
+                            <img src="img/design/prueba_a.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="e w3 h1 image" style="background-color: lightblue;">
+                            <img src="img/design/prueba_i.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="e w2 h1 image" style="background-color: lightgreen;">
+                            <img src="img/design/prueba_e.jpg" alt="">
+                            <div class="image__info">
+                                <div class="wrapper">
+                                    <a href="#" class="image__info__title">titulo</a>
+                                    <a href="#" class="c-design image__info__category">categoría</a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <ul class="list list--inline nav">
+                        <li class="icon nav__button nav__button--previous" title="anterior">&#59237;</li><!--
+                        --><li class="icon nav__button nav__button--next" title="siguiente">&#59238;</li>
+                    </ul>
                 </article>
                 <!--========== art+ | main - article architecture ==========-->
                 <article class="architecture">
@@ -238,7 +324,17 @@
                         --><li><a href="#" class="bgc-hover-architecture">urbanismo</a></li><!--
                         --><li><a href="#" class="bgc-hover-architecture">paisajismo</a></li>
                     </menu>
-                    <section></section>
+                    <section class="grid images">
+                        <div class="e w1 h2 image" style="background-color: #111;"></div>
+                        <div class="e w1 h3 image" style="background-color: #777;"></div>
+                        <div class="e w2 h4 image" style="background-color: #333;"></div>
+                        <div class="e w2 h2 image" style="background-color: #555;"></div>
+                        <div class="e w2 h2 image" style="background-color: cyan;"></div>
+                        <div class="e w1 h3 image" style="background-color: #ccc;"></div>
+                        <div class="e w1 h1 image" style="background-color: #999;"></div>
+                        <div class="e w3 h1 image" style="background-color: lightblue;"></div>
+                        <div class="e w2 h1 image" style="background-color: lightgreen;"></div>    
+                    </section>
                 </article>
                 <!--========== art+ | main - article paint ==========-->
                 <article class="paint">
@@ -252,7 +348,17 @@
                         --><li><a href="#" class="bgc-hover-paint">body painting y tatoo</a></li><!--
                         --><li><a href="#" class="bgc-hover-paint">contemporánea</a></li>
                     </menu>
-                    <section></section>
+                    <section class="grid images">
+                        <div class="e w1 h2 image" style="background-color: #111;"></div>
+                        <div class="e w1 h3 image" style="background-color: #777;"></div>
+                        <div class="e w2 h4 image" style="background-color: #333;"></div>
+                        <div class="e w2 h2 image" style="background-color: #555;"></div>
+                        <div class="e w2 h2 image" style="background-color: cyan;"></div>
+                        <div class="e w1 h3 image" style="background-color: #ccc;"></div>
+                        <div class="e w1 h1 image" style="background-color: #999;"></div>
+                        <div class="e w3 h1 image" style="background-color: lightblue;"></div>
+                        <div class="e w2 h1 image" style="background-color: lightgreen;"></div>    
+                    </section>
                 </article>
                 <!--========== art+ | main - article photography ==========-->
                 <article class="photography">
@@ -263,7 +369,17 @@
                         --><li><a href="#" class="bgc-hover-photography">naturaleza</a></li><!--
                         --><li><a href="#" class="bgc-hover-photography">conceptual y otros</a></li>
                     </menu>
-                    <section></section>
+                    <section class="grid images">
+                        <div class="e w1 h2 image" style="background-color: #111;"></div>
+                        <div class="e w1 h3 image" style="background-color: #777;"></div>
+                        <div class="e w2 h4 image" style="background-color: #333;"></div>
+                        <div class="e w2 h2 image" style="background-color: #555;"></div>
+                        <div class="e w2 h2 image" style="background-color: cyan;"></div>
+                        <div class="e w1 h3 image" style="background-color: #ccc;"></div>
+                        <div class="e w1 h1 image" style="background-color: #999;"></div>
+                        <div class="e w3 h1 image" style="background-color: lightblue;"></div>
+                        <div class="e w2 h1 image" style="background-color: lightgreen;"></div>    
+                    </section>
                 </article>
                 <!--========== art+ | main - article mixed ==========-->
                 <article class="mixed">
@@ -273,7 +389,17 @@
                         --><li><a href="#" class="bgc-hover-mixed">animación y videojuegos</a></li><!--
                         --><li><a href="#" class="bgc-hover-mixed">teatro</a></li>
                     </menu>
-                    <section></section>
+                    <section class="grid images">
+                        <div class="e w1 h2 image" style="background-color: #111;"></div>
+                        <div class="e w1 h3 image" style="background-color: #777;"></div>
+                        <div class="e w2 h4 image" style="background-color: #333;"></div>
+                        <div class="e w2 h2 image" style="background-color: #555;"></div>
+                        <div class="e w2 h2 image" style="background-color: cyan;"></div>
+                        <div class="e w1 h3 image" style="background-color: #ccc;"></div>
+                        <div class="e w1 h1 image" style="background-color: #999;"></div>
+                        <div class="e w3 h1 image" style="background-color: lightblue;"></div>
+                        <div class="e w2 h1 image" style="background-color: lightgreen;"></div>    
+                    </section>
                 </article>
                 <!--========== art+ | main - article sculpture ==========-->
                 <article class="sculpture">
@@ -284,7 +410,17 @@
                         --><li><a href="#" class="bgc-hover-sculpture">cinética</a></li><!--
                         --><li><a href="#" class="bgc-hover-sculpture">contemporánea</a></li>
                     </menu>
-                    <section></section>
+                    <section class="grid images">
+                        <div class="e w1 h2 image" style="background-color: #111;"></div>
+                        <div class="e w1 h3 image" style="background-color: #777;"></div>
+                        <div class="e w2 h4 image" style="background-color: #333;"></div>
+                        <div class="e w2 h2 image" style="background-color: #555;"></div>
+                        <div class="e w2 h2 image" style="background-color: cyan;"></div>
+                        <div class="e w1 h3 image" style="background-color: #ccc;"></div>
+                        <div class="e w1 h1 image" style="background-color: #999;"></div>
+                        <div class="e w3 h1 image" style="background-color: lightblue;"></div>
+                        <div class="e w2 h1 image" style="background-color: lightgreen;"></div>    
+                    </section>
                 </article>
                 <!--========== art+ | main - article dynamics ==========-->
                 <article class="dynamics">
@@ -294,12 +430,45 @@
                         --><li><a href="#" class="bgc-hover-dynamics">literatura</a></li><!--
                         --><li><a href="#" class="bgc-hover-dynamics">danza</a></li>
                     </menu>
-                    <section></section>
+                    <section class="grid images">
+                        <div class="e w1 h2 image" style="background-color: #111;"></div>
+                        <div class="e w1 h3 image" style="background-color: #777;"></div>
+                        <div class="e w2 h4 image" style="background-color: #333;"></div>
+                        <div class="e w2 h2 image" style="background-color: #555;"></div>
+                        <div class="e w2 h2 image" style="background-color: cyan;"></div>
+                        <div class="e w1 h3 image" style="background-color: #ccc;"></div>
+                        <div class="e w1 h1 image" style="background-color: #999;"></div>
+                        <div class="e w3 h1 image" style="background-color: lightblue;"></div>
+                        <div class="e w2 h1 image" style="background-color: lightgreen;"></div>    
+                    </section>
                 </article>
             </div>
         </main>
         <!--========== art+ | footer ==========-->
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <ul class="list list--inline" style="position: relative; width: 960px; margin: auto; color: #fff; font-family: 'Oswald', sans-serif;">
+                <li style="display: block; text-align: center; text-transform: uppercase; font-family: 'FJalla One', sans-serif; font-size: 1.5em; padding: 2em 0; color: #fac600;">contacto</li>
+                <li style="width: 40%; vertical-align: top;">
+                    <div style="margin-bottom: 15px;">
+                        <label for="name" style="text-transform: uppercase; display: block; margin-bottom: 5px;">nombre</label>
+                        <input type="text" name="name" id="" style="width: 88%; border: 0; outline: 0; color: #333; display: block; padding: 10px 6%;" placeholder="NOMBRE">
+                    </div>
+                    <div style="margin-bottom: 15px;">
+                        <label for="email" style="text-transform: uppercase; display: block; margin-bottom: 5px;">correo electrónico</label>
+                        <input type="email" name="email" id="" style="width: 88%; border: 0; outline: 0; color: #333; display: block; padding: 10px 6%;" placeholder="CORREO ELECTRÓNICO">
+                    </div>
+                    <span style="font-family: monospace; font-size: .85em;">Es necesario rellenar todos para enviar el mensaje *</span>
+                </li><!--
+                --><li style="width: 60%; vertical-align: top;">
+                    <textarea name="" id="" style="border: 0; outline: 0; width: 87%; height: 125px; margin-left: 5%; margin-bottom: 15px; padding: 10px 4%; color: #333;" placeholder="MENSAJE"></textarea>
+                    <ul class="list list--inline" style="text-align: right;">
+                        <li style="border: 0; outline: 0; background-color: #fff; text-transform: uppercase; color: #333; padding: 10px; cursor: pointer;">enviar</li><!--
+                        --><li style="border: 0; outline: 0; background-color: #fff; text-transform: uppercase; color: #333; padding: 10px; cursor: pointer; margin-left: 10px;">limpiar</li>
+                    </ul>
+                </li>
+            </ul>
+            <div style="color: #fff; text-align: center; margin: 1em 0; font-family: sans-serif;">Art+ &copy; Todos los derechos reservados. Diseñado por <a href="#" style="color: #fac600;">@gonzalo</a> y desarrollado por <a href="#" style="color: #fac600;">@danilobrinu</a></div>
+        </footer>
         <!--========== art+ | javascript ==========-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
